@@ -21,6 +21,7 @@ import java.io.IOException;
 
 import org.apache.lucene.store.DataInput;
 import org.apache.lucene.store.DataOutput;
+import org.apache.lucene.util.RamUsageEstimator;
 
 /**
  * An FST {@link Outputs} implementation, holding two other outputs.
@@ -176,9 +177,11 @@ public class PairOutputs<A,B> extends Outputs<PairOutputs.Pair<A,B>> {
     return "PairOutputs<" + outputs1 + "," + outputs2 + ">";
   }
 
+  private static final long BASE_NUM_BYTES = RamUsageEstimator.shallowSizeOf(new Pair<Object,Object>(null, null));
+
   @Override
   public long ramBytesUsed(Pair<A,B> output) {
-    long ramBytesUsed = super.ramBytesUsed(output);
+    long ramBytesUsed = BASE_NUM_BYTES;
     if (output.output1 != null) {
       ramBytesUsed += outputs1.ramBytesUsed(output.output1);
     }
